--- a/index.Background.css
+++ b/index.Background.css
@@ -49,6 +49,12 @@ img {
     border: 7px solid orange;
 }
 
+img:hover {
+    transform: scale(1.2);
+    transition: 1s;
+    box-shadow: 10px 10px 10px pink;
+}
+
 .Info {
     text-align: center;
     font-size: 3em;
