--- a/infos.css
+++ b/infos.css
@@ -94,7 +94,7 @@ body {
 
 .Friends_Name {
     font-size: 2em;
-    color: black;
+    color: Pink;
     font-weight: bold;
     font-style: italic;
     font-family: "Anton", sans-serif;
