--- a/infos.css
+++ b/infos.css
@@ -44,6 +44,14 @@ body {
     font-family: "Playwrite AT", cursive;
 }
 
+.Programmieren {
+    font-size: 3em;
+    color: orange;
+    font-weight: bold;
+    font-style: italic;
+    font-family: "Pixelify Sans", sans-serif;
+}
+
 .YouTube:hover {
     color: pink;
     text-align: center;
