--- a/Programmieren/All.Pages.Programmieren.css
+++ b/Programmieren/All.Pages.Programmieren.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url("https://onedrive.live.com/embed?resid=FB2B769EC8CC7929%2170337&authkey=%21AP-a10iHXXkQmUk&width=200&height=200")
+  background-image: url("https://it-talents.de/wp-content/uploads/2018/08/programmieren_lernen.jpg")
   background-repeat: no-repeat;
   position: center;
   background-size: cover;
