--- a/Programmieren/All.Pages.Programmieren.css
+++ b/Programmieren/All.Pages.Programmieren.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url("https://it-talents.de/wp-content/uploads/2018/08/programmieren_lernen.jpg")
+  background-image: url("https://it-talents.de/wp-content/uploads/2018/08/programmieren_lernen.jpg");
   background-repeat: no-repeat;
   position: center;
   background-size: cover;
