--- a/infos.css
+++ b/infos.css
@@ -46,7 +46,7 @@ body {
 
 .Programmieren {
     font-size: 3em;
-    color: orange;
+    color: purple;
     font-weight: bold;
     font-style: italic;
     font-family: "Pixelify Sans", sans-serif;
