--- a/quiz.html.css
+++ b/quiz.html.css
@@ -53,6 +53,14 @@ body {
     padding-top: 2%;
 }
 
+.Programmieren {
+    font-size: 3em;
+    color: purple;
+    font-weight: bold;
+    font-style: italic;
+    font-family: "Pixelify Sans", sans-serif;
+}
+
 .questions {
     border-style: solid;
     border-color: black;
