--- a/Programmieren/index.Programmieren.Background.css
+++ b/Programmieren/index.Programmieren.Background.css
@@ -52,7 +52,7 @@ img:hover {
     font-family: "Pixelify Sans", sans-serif;
 }
 
-.Präsentation {
+.Praesentation {
     text-align: center;
     font-size: 3em;
     color: aqua;
