--- a/Programmieren/Präsentation.html.css
+++ b/Programmieren/Präsentation.html.css
@@ -6,15 +6,7 @@
     font-family: "Pixelify Sans", sans-serif;
 }
 
-.Quiz {
-    font-size: 3em;
-    color: aqua;
-    font-weight: bold;
-    font-style: italic;
-    font-family: "Roboto", sans-serif;
-}
-
-.Info {
+.Presentation {
     font-size: 3em;
     color: pink;
     font-weight: bold;
@@ -36,4 +28,12 @@
     font-weight: bold;
     font-style: italic;
     font-family: "Pixelify Sans", sans-serif;
+}
+
+.Präsentation{
+    font-size: 3em;
+    color: pink;
+    font-weight: bold;
+    font-style: italic;
+    font-family: "Anton", sans-serif;
 }
