--- a/Programmieren/Präsentation.html.css
+++ b/Programmieren/Präsentation.html.css
@@ -30,7 +30,7 @@
     font-family: "Pixelify Sans", sans-serif;
 }
 
-.Präsentation{
+.Praesentation{
     font-size: 3em;
     color: pink;
     font-weight: bold;
