--- a/Programmieren/media.html.css
+++ b/Programmieren/media.html.css
@@ -6,15 +6,7 @@
     font-family: "Pixelify Sans", sans-serif;
 }
 
-.Quiz {
-    font-size: 3em;
-    color: aqua;
-    font-weight: bold;
-    font-style: italic;
-    font-family: "Roboto", sans-serif;
-}
-
-.Info {
+.Präsentation {
     font-size: 3em;
     color: pink;
     font-weight: bold;
@@ -30,7 +22,7 @@
     font-family: "Playwrite AT", cursive;
 }
 
-.Aphmau {
+.Radio {
     font-size: 3em;
     color: purple;
     font-weight: bold;
