--- a/Programmieren/media.html.css
+++ b/Programmieren/media.html.css
@@ -6,7 +6,7 @@
     font-family: "Pixelify Sans", sans-serif;
 }
 
-.Präsentation {
+.Presentation {
     font-size: 3em;
     color: pink;
     font-weight: bold;
