--- a/Programmieren/Präsentation.html.css
+++ b/Programmieren/Präsentation.html.css
@@ -22,7 +22,7 @@
     font-family: "Playwrite AT", cursive;
 }
 
-.Aphmau {
+.Radio {
     font-size: 3em;
     color: purple;
     font-weight: bold;
