--- a/Programmieren/index.Programmieren.Background.css
+++ b/Programmieren/index.Programmieren.Background.css
@@ -74,7 +74,7 @@ img:hover {
     font-family: "Anton", sans-serif;
 }
 
-.Aphmau {
+.Radio {
     text-align: center;
     font-size: 3em;
     color: red;
