--- a/Programmieren/index.Programmieren.Background.css
+++ b/Programmieren/index.Programmieren.Background.css
@@ -1,6 +1,6 @@
 .r3 {
     width: 100%;
-    height: 33.3%;
+    height: 25%;
 }
 
 .c3 {
@@ -83,4 +83,16 @@ img:hover {
     text-decoration: underline;
     text-decoration-color: purple;
     font-family: "Pixelify Sans", sans-serif;
+}
+
+
+.Aphmau {
+    text-align: center;
+    font-size: 3em;
+    color: aqua;
+    font-weight: bold;
+    font-style: italic;
+    text-decoration: underline;
+    text-decoration-color: orange;
+    font-family: "Roboto", sans-serif;
 }
