--- a/Programmieren/Radio/Switzerland.css
+++ b/Programmieren/Radio/Switzerland.css
@@ -10,3 +10,36 @@
     -webkit-text-stroke-color: pink;
     -webkit-text-stroke-width: 0.125px;
 }
+
+.Sunshine {
+    text-align: center;
+    font-size: 3em;
+    color: aqua;
+    font-weight: bold;
+    font-style: italic;
+    text-decoration: underline;
+    text-decoration-color: orange;
+    font-family: "Roboto", sans-serif;
+}
+
+.NRJ {
+    text-align: center;
+    font-size: 3em;
+    color: pink;
+    font-weight: bold;
+    font-style: italic;
+    text-decoration: underline;
+    text-decoration-color: black;
+    font-family: "Anton", sans-serif;
+}
+
+.Home {
+    text-align: center;
+    font-size: 3em;
+    color: red;
+    font-weight: bold;
+    font-style: italic;
+    text-decoration: underline;
+    text-decoration-color: purple;
+    font-family: "Pixelify Sans", sans-serif;
+}
