--- a/Programmieren/Radio/Switzerland.css
+++ b/Programmieren/Radio/Switzerland.css
@@ -43,3 +43,16 @@
     text-decoration-color: purple;
     font-family: "Pixelify Sans", sans-serif;
 }
+
+.24 {
+    text-align: center;
+    font-size: 5em;
+    color: purple;
+    font-weight: bold;
+    font-style: italic;
+    text-decoration: underline;
+    text-decoration-color: red;
+    font-family: "Playwrite AT", cursive;
+    -webkit-text-stroke-color: pink;
+    -webkit-text-stroke-width: 0.125px;
+}
