--- a/Programmieren/Radio/Switzerland.css
+++ b/Programmieren/Radio/Switzerland.css
@@ -36,7 +36,7 @@
 .Home {
     text-align: center;
     font-size: 3em;
-    color: red;
+    color: black;
     font-weight: bold;
     font-style: italic;
     text-decoration: underline;
