--- a/Programmieren/Radio/Switzerland.css
+++ b/Programmieren/Radio/Switzerland.css
@@ -44,7 +44,7 @@
     font-family: "Pixelify Sans", sans-serif;
 }
 
-.24 {
+.Radio {
     text-align: center;
     font-size: 5em;
     color: purple;
