--- a/Programmieren/Radio/Radio.css
+++ b/Programmieren/Radio/Radio.css
@@ -1,1 +1,12 @@
-
+.Home {
+    text-align: center;
+    font-size: 5em;
+    color: purple;
+    font-weight: bold;
+    font-style: italic;
+    text-decoration: underline;
+    text-decoration-color: red;
+    font-family: "Playwrite AT", cursive;
+    -webkit-text-stroke-color: pink;
+    -webkit-text-stroke-width: 0.125px;
+}
