--- a/Programmieren/Radio/Sunshine.css
+++ b/Programmieren/Radio/Sunshine.css
@@ -5,7 +5,7 @@
     font-weight: bold;
     font-style: italic;
     text-decoration: underline;
-    text-decoration-color: red;
+    text-decoration-color: black;
     font-family: "Playwrite AT", cursive;
     -webkit-text-stroke-color: pink;
     -webkit-text-stroke-width: 0.125px;
