--- a/Programmieren/Radio/Germany.css
+++ b/Programmieren/Radio/Germany.css
@@ -19,3 +19,14 @@
     text-decoration-color: orange;
     font-family: "Roboto", sans-serif;
 }
+
+.Home {
+    text-align: center;
+    font-size: 3em;
+    color: black;
+    font-weight: bold;
+    font-style: italic;
+    text-decoration: underline;
+    text-decoration-color: purple;
+    font-family: "Pixelify Sans", sans-serif;
+}
