--- a/Programmieren/Radio/Germany.css
+++ b/Programmieren/Radio/Germany.css
@@ -30,3 +30,14 @@
     text-decoration-color: purple;
     font-family: "Pixelify Sans", sans-serif;
 }
+
+.Toggo {
+    text-align: center;
+    font-size: 3em;
+    color: pink;
+    font-weight: bold;
+    font-style: italic;
+    text-decoration: underline;
+    text-decoration-color: black;
+    font-family: "Anton", sans-serif;
+}
