--- a/Programmieren/Präsentation.html.css
+++ b/Programmieren/Präsentation.html.css
@@ -37,3 +37,11 @@
     font-style: italic;
     font-family: "Anton", sans-serif;
 }
+
+.PraesentationKarten{
+    font-size: 3em;
+    color: orange;
+    font-weight: bold;
+    font-style: italic;
+    font-family: "Playwrite AT", cursive;
+}
