--- a/index.Background.css
+++ b/index.Background.css
@@ -98,3 +98,14 @@ img:hover {
     text-decoration-color: purple;
     font-family: "Pixelify Sans", sans-serif;
 }
+
+.Radio {
+    text-align: center;
+    font-size: 3em;
+    color: aqua;
+    font-weight: bold;
+    font-style: italic;
+    text-decoration: underline;
+    text-decoration-color: orange;
+    font-family: "Roboto", sans-serif;
+}
