--- a/Programmieren/Präsentation.html.css
+++ b/Programmieren/Präsentation.html.css
@@ -45,3 +45,11 @@
     font-style: italic;
     font-family: "Playwrite AT", cursive;
 }
+
+.Aphmau {
+    font-size: 3em;
+    color: purple;
+    font-weight: bold;
+    font-style: italic;
+    font-family: "Pixelify Sans", sans-serif;
+}
