--- a/Programmieren/media.html.css
+++ b/Programmieren/media.html.css
@@ -46,3 +46,11 @@ iframe {
     margin-left: auto;
     margin-right: auto;
 }
+
+.Aphmau {
+    font-size: 3em;
+    color: purple;
+    font-weight: bold;
+    font-style: italic;
+    font-family: "Pixelify Sans", sans-serif;
+}
