--- a/Programmieren/Radio/Romania.css
+++ b/Programmieren/Radio/Romania.css
@@ -9,7 +9,7 @@
     font-family: "Pixelify Sans", sans-serif;
 }
 
-.Vrigin {
+.Virgin {
     text-align: center;
     font-size: 3em;
     color: pink;
