--- a/Programmieren/Radio/Install/All.Pages.css
+++ b/Programmieren/Radio/Install/All.Pages.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url("https://www.google.com/url?sa=i&url=https%3A%2F%2Froutenote.com%2Fblog%2Fthe-most-popular-app-in-the-world-revealed%2F&psig=AOvVaw1AOqVuHmR72EoqZXCICXum&ust=1724413900089000&source=images&cd=vfe&opi=89978449&ved=0CBQQjRxqFwoTCMDf1sLEiIgDFQAAAAAdAAAAABAE");
+  background-image: url("https://routenote.com/blog/wp-content/uploads/2023/04/2023-the-most-popular-app-in-the-world.png");
   background-repeat: no-repeat;
   position: center;
   background-size: cover;
