--- a/index.Background.css
+++ b/index.Background.css
@@ -12,13 +12,13 @@ body {
     );
 }
 
-.r5 {
+.r6 {
     width: 100%;
-    height: 20%;
+    height: 16.6%;
 }
 
-.c5 {
-    width: 20%;
+.c6 {
+    width: 16.6%;
     height: 100%;
     position: relative;
     float: left;
@@ -108,4 +108,15 @@ img:hover {
     text-decoration: underline;
     text-decoration-color: orange;
     font-family: "Roboto", sans-serif;
+}
+
+.Apps {
+    text-align: center;
+    font-size: 1.5em;
+    color: pink;
+    font-weight: bold;
+    font-style: italic;
+    text-decoration: underline;
+    text-decoration-color: black;
+    font-family: "Anton", sans-serif;
 }
