--- a/infos.css
+++ b/infos.css
@@ -156,3 +156,11 @@ img {
     font-style: italic;
     font-family: "Roboto", sans-serif;
 }
+
+.Apps {
+    font-size: 2em;
+    color: Pink;
+    font-weight: bold;
+    font-style: italic;
+    font-family: "Anton", sans-serif;
+}
