--- a/media.html.css
+++ b/media.html.css
@@ -87,3 +87,11 @@ iframe {
     font-style: italic;
     font-family: "Roboto", sans-serif;
 }
+
+.Apps {
+    font-size: 2em;
+    color: Pink;
+    font-weight: bold;
+    font-style: italic;
+    font-family: "Anton", sans-serif;
+}
