--- a/Programmieren/media.html.css
+++ b/Programmieren/media.html.css
@@ -54,3 +54,11 @@ iframe {
     font-style: italic;
     font-family: "Pixelify Sans", sans-serif;
 }
+
+.Apps {
+    font-size: 2em;
+    color: Pink;
+    font-weight: bold;
+    font-style: italic;
+    font-family: "Anton", sans-serif;
+}
