Changed Android .css

--- a/Programmieren/Radio/Install/Android.css
+++ b/Programmieren/Radio/Install/Android.css
@@ -34,7 +34,7 @@
 .Programmieren {
     text-align: center;
     font-size: 3em;
-    color: red;
+    color: black;
     font-weight: bold;
     font-style: italic;
     text-decoration: underline;
@@ -62,4 +62,15 @@
     text-decoration: underline;
     text-decoration-color: black;
     font-family: "Anton", sans-serif;
+}
+
+.Home {
+    text-align: center;
+    font-size: 3em;
+    color: black;
+    font-weight: bold;
+    font-style: italic;
+    text-decoration: underline;
+    text-decoration-color: purple;
+    font-family: "Pixelify Sans", sans-serif;
 }
