Deleted Android, Updated Index and Added Windows

--- a/Programmieren/Radio/Install/Windows.css
+++ b/Programmieren/Radio/Install/Windows.css
@@ -1,14 +1,3 @@
-.Android {
-    text-align: center;
-    font-size: 3em;
-    color: purple;
-    font-weight: bold;
-    font-style: italic;
-    text-decoration: underline;
-    text-decoration-color: red;
-    font-family: "Pixelify Sans", sans-serif;
-}
-
 .Windows {
     text-align: center;
     font-size: 1.5em;
@@ -34,7 +23,7 @@
 .Programmieren {
     text-align: center;
     font-size: 3em;
-    color: black;
+    color: red;
     font-weight: bold;
     font-style: italic;
     text-decoration: underline;
@@ -51,26 +40,4 @@
     text-decoration: underline;
     text-decoration-color: orange;
     font-family: "Roboto", sans-serif;
-}
-
-.Android.App {
-    text-align: center;
-    font-size: 3em;
-    color: pink;
-    font-weight: bold;
-    font-style: italic;
-    text-decoration: underline;
-    text-decoration-color: black;
-    font-family: "Anton", sans-serif;
-}
-
-.Home {
-    text-align: center;
-    font-size: 3em;
-    color: black;
-    font-weight: bold;
-    font-style: italic;
-    text-decoration: underline;
-    text-decoration-color: purple;
-    font-family: "Pixelify Sans", sans-serif;
 }
