--- a/Programmieren/Radio/Switzerland.css
+++ b/Programmieren/Radio/Switzerland.css
@@ -107,3 +107,14 @@
     text-decoration-color: orange;
     font-family: "Roboto", sans-serif;
 }
+
+.SRF {
+    text-align: center;
+    font-size: 3em;
+    color: pink;
+    font-weight: bold;
+    font-style: italic;
+    text-decoration: underline;
+    text-decoration-color: black;
+    font-family: "Anton", sans-serif;
+}
