--- a/Programmieren/Radio/Install/Apps/index.css
+++ b/Programmieren/Radio/Install/Apps/index.css
@@ -3,8 +3,8 @@
     height: 25%;
 }
 
-.c5 {
-    width: 20%;
+.c6 {
+    width: 16.6%;
     height: 100%;
     position: relative;
     float: left;
@@ -85,7 +85,7 @@ img:hover {
     font-family: "Roboto", sans-serif;
 }
 
-.Install {
+.Apps {
     text-align: center;
     font-size: 3em;
     color: pink;
