--- a/media.html.css
+++ b/media.html.css
@@ -95,3 +95,11 @@ iframe {
     font-style: italic;
     font-family: "Anton", sans-serif;
 }
+
+.Install {
+    font-size: 3em;
+    color: orange;
+    font-weight: bold;
+    font-style: italic;
+    font-family: "Playwrite AT", cursive;
+}
