--- a/quiz.html.css
+++ b/quiz.html.css
@@ -85,6 +85,15 @@ body {
     font-style: italic;
     font-family: "Anton", sans-serif;
 }
+
+.Install {
+    font-size: 3em;
+    color: purple;
+    font-weight: bold;
+    font-style: italic;
+    font-family: "Pixelify Sans", sans-serif;
+    }
+
 p {
     color: purple;
     font-weight: bold;
