--- a/Programmieren/Radio/index.css
+++ b/Programmieren/Radio/index.css
@@ -103,3 +103,14 @@ img:hover {
     font-style: italic;
     font-family: "Anton", sans-serif;
 }
+
+.Install {
+    text-align: center;
+    font-size: 3em;
+    color: red;
+    font-weight: bold;
+    font-style: italic;
+    text-decoration: underline;
+    text-decoration-color: purple;
+    font-family: "Pixelify Sans", sans-serif;
+}
