--- a/Programmieren/Radio/Install/Apps/Android.css
+++ b/Programmieren/Radio/Install/Apps/Android.css
@@ -1,4 +1,4 @@
-.ChatGPT {
+.Games {
     text-align: center;
     font-size: 1.5em;
     color: aqua;
@@ -9,7 +9,7 @@
     font-family: "Roboto", sans-serif;
 }
 
-.WhatsApp {
+.Apps {
     text-align: center;
     font-size: 3em;
     color: pink;
