--- a/Programmieren/Radio/Install/Apps/Tycoon.css
+++ b/Programmieren/Radio/Install/Apps/Tycoon.css
@@ -8,3 +8,25 @@
     text-decoration-color: orange;
     font-family: "Roboto", sans-serif;
 }
+
+.Information {
+    text-align: center;
+    font-size: 3em;
+    color: pink;
+    font-weight: bold;
+    font-style: italic;
+    text-decoration: underline;
+    text-decoration-color: black;
+    font-family: "Anton", sans-serif;
+}
+
+.APK {
+    text-align: center;
+    font-size: 3em;
+    color: black;
+    font-weight: bold;
+    font-style: italic;
+    text-decoration: underline;
+    text-decoration-color: purple;
+    font-family: "Pixelify Sans", sans-serif;
+}
