--- a/Programmieren/Radio/Install/Apps/Android.Apps.css
+++ b/Programmieren/Radio/Install/Apps/Android.Apps.css
@@ -139,3 +139,25 @@
     text-decoration-color: purple;
     font-family: "Pixelify Sans", sans-serif;
 }
+
+.Insta {
+    text-align: center;
+    font-size: 3em;
+    color: pink;
+    font-weight: bold;
+    font-style: italic;
+    text-decoration: underline;
+    text-decoration-color: black;
+    font-family: "Anton", sans-serif;
+}
+
+.Github {
+    text-align: center;
+    font-size: 3em;
+    color: black;
+    font-weight: bold;
+    font-style: italic;
+    text-decoration: underline;
+    text-decoration-color: purple;
+    font-family: "Pixelify Sans", sans-serif;
+}
