--- a/Programmieren/Radio/Install/Apps/index.css
+++ b/Programmieren/Radio/Install/Apps/index.css
@@ -4,7 +4,7 @@
 }
 
 .c6 {
-    width: 12.5%;
+    width: 11.1%;
     height: 100%;
     position: relative;
     float: left;
@@ -127,4 +127,15 @@ img:hover {
     text-decoration: underline;
     text-decoration-color: purple;
     font-family: "Pixelify Sans", sans-serif;
+}
+
+.ADS {
+    text-align: center;
+    font-size: 1.5em;
+    color: aqua;
+    font-weight: bold;
+    font-style: italic;
+    text-decoration: underline;
+    text-decoration-color: orange;
+    font-family: "Roboto", sans-serif;
 }
