--- a/Programmieren/Radio/Install/index.css
+++ b/Programmieren/Radio/Install/index.css
@@ -4,7 +4,7 @@
 }
 
 .c5 {
-    width: 20%;
+    width: 16.6%;
     height: 100%;
     position: relative;
     float: left;
@@ -94,4 +94,15 @@ img:hover {
     text-decoration: underline;
     text-decoration-color: black;
     font-family: "Anton", sans-serif;
+}
+
+.ADS {
+    text-align: center;
+    font-size: 3em;
+    color: red;
+    font-weight: bold;
+    font-style: italic;
+    text-decoration: underline;
+    text-decoration-color: purple;
+    font-family: "Pixelify Sans", sans-serif;
 }
