--- a/Programmieren/index.Programmieren.Background.css
+++ b/Programmieren/index.Programmieren.Background.css
@@ -4,7 +4,7 @@
 }
 
 .c5 {
-    width: 16.6%;
+    width: 14.2%;
     height: 100%;
     position: relative;
     float: left;
@@ -103,4 +103,15 @@ img:hover {
     text-decoration: underline;
     text-decoration-color: purple;
     font-family: "Pixelify Sans", sans-serif;
+}
+
+.ADS {
+    text-align: center;
+    font-size: 3em;
+    color: aqua;
+    font-weight: bold;
+    font-style: italic;
+    text-decoration: underline;
+    text-decoration-color: orange;
+    font-family: "Roboto", sans-serif;
 }
