--- a/Programmieren/Radio/Install/Apps/Android.Apps.css
+++ b/Programmieren/Radio/Install/Apps/Android.Apps.css
@@ -161,3 +161,14 @@
     text-decoration-color: purple;
     font-family: "Pixelify Sans", sans-serif;
 }
+
+.FM {
+    text-align: center;
+    font-size: 3em;
+    color: pink;
+    font-weight: bold;
+    font-style: italic;
+    text-decoration: underline;
+    text-decoration-color: black;
+    font-family: "Anton", sans-serif;
+}
