--- a/Programmieren/Radio/Install/Apps/All.Pages.css
+++ b/Programmieren/Radio/Install/Apps/All.Pages.css
@@ -3,17 +3,27 @@ body {
     background-repeat: no-repeat;
     position: center;
     background-size: cover;
-  }
-  
-  .nav {
-      background-color: red;
-      padding-top: 1%;
-      padding-bottom: 1%;
-      width: 100%;
-      text-align: center;
-  }
-  
-  .nav a {
-      padding: 1%;
-  }
-  
+}
+
+.nav {
+    background-color: red;
+    padding-top: 1%;
+    padding-bottom: 1%;
+    width: 100%;
+    text-align: center;
+}
+
+.nav a {
+    padding: 1%;
+}
+
+.Official {
+    text-align: center;
+    font-size: 1.5em;
+    color: aqua;
+    font-weight: bold;
+    font-style: italic;
+    text-decoration: underline;
+    text-decoration-color: orange;
+    font-family: "Roboto", sans-serif;
+}
