--- a/index.Background.css
+++ b/index.Background.css
@@ -131,3 +131,14 @@ img:hover {
     text-decoration-color: purple;
     font-family: "Pixelify Sans", sans-serif;
 }
+
+.ADS {
+    text-align: center;
+    font-size: 1.5em;
+    color: aqua;
+    font-weight: bold;
+    font-style: italic;
+    text-decoration: underline;
+    text-decoration-color: orange;
+    font-family: "Roboto", sans-serif;
+}
