--- a/ADS/index.css
+++ b/ADS/index.css
@@ -154,3 +154,14 @@ img:hover {
     text-decoration-color: purple;
     font-family: "Pixelify Sans", sans-serif;
 }
+
+.Minecraft {
+    text-align: center;
+    font-size: 1.5em;
+    color: aqua;
+    font-weight: bold;
+    font-style: italic;
+    text-decoration: underline;
+    text-decoration-color: orange;
+    font-family: "Roboto", sans-serif;
+}
