--- a/index.Background.css
+++ b/index.Background.css
@@ -142,3 +142,14 @@ img:hover {
     text-decoration-color: orange;
     font-family: "Roboto", sans-serif;
 }
+
+.Minecraft {
+    text-align: center;
+    font-size: 1.5em;
+    color: pink;
+    font-weight: bold;
+    font-style: italic;
+    text-decoration: underline;
+    text-decoration-color: black;
+    font-family: "Anton", sans-serif;
+}
