--- a/Programmieren/Radio/index.css
+++ b/Programmieren/Radio/index.css
@@ -125,3 +125,11 @@ img:hover {
     text-decoration-color: orange;
     font-family: "Roboto", sans-serif;
 }
+
+.Minecraft {
+    font-size: 2em;
+    color: Pink;
+    font-weight: bold;
+    font-style: italic;
+    font-family: "Anton", sans-serif;
+}
