--- a/Programmieren/Radio/Install/index.css
+++ b/Programmieren/Radio/Install/index.css
@@ -4,7 +4,7 @@
 }
 
 .c5 {
-    width: 16.6%;
+    width: 14.2%;
     height: 100%;
     position: relative;
     float: left;
@@ -105,4 +105,15 @@ img:hover {
     text-decoration: underline;
     text-decoration-color: purple;
     font-family: "Pixelify Sans", sans-serif;
+}
+
+.Minecraft {
+    text-align: center;
+    font-size: 1.5em;
+    color: aqua;
+    font-weight: bold;
+    font-style: italic;
+    text-decoration: underline;
+    text-decoration-color: orange;
+    font-family: "Roboto", sans-serif;
 }
