--- a/Programmieren/Radio/Install/Apps/index.css
+++ b/Programmieren/Radio/Install/Apps/index.css
@@ -4,7 +4,7 @@
 }
 
 .c6 {
-    width: 11.1%;
+    width: 10%;
     height: 100%;
     position: relative;
     float: left;
@@ -138,4 +138,15 @@ img:hover {
     text-decoration: underline;
     text-decoration-color: orange;
     font-family: "Roboto", sans-serif;
+}
+
+.Minecraft {
+    text-align: center;
+    font-size: 3em;
+    color: red;
+    font-weight: bold;
+    font-style: italic;
+    text-decoration: underline;
+    text-decoration-color: purple;
+    font-family: "Pixelify Sans", sans-serif;
 }
