--- a/Programmieren/Radio/Install/Apps/Minecraft/All.Pages.css
+++ b/Programmieren/Radio/Install/Apps/Minecraft/All.Pages.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url("https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.minecraft.net%2Fde-de&psig=AOvVaw2tpZobM7ESrJQXzZKacmoN&ust=1724845449069000&source=images&cd=vfe&opi=89978449&ved=0CBQQjRxqFwoTCPDW0JWMlYgDFQAAAAAdAAAAABAE");
+  background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTSbWOL6AqgFI9M4eblTENTH_X5OYkzBMpvZA&s");
   background-repeat: no-repeat;
   position: center;
   background-size: cover;
