--- a/Programmieren/Radio/Install/All.Pages.css
+++ b/Programmieren/Radio/Install/All.Pages.css
@@ -1,6 +1,6 @@
 body {
   background-image: url("https://routenote.com/blog/wp-content/uploads/2023/04/2023-the-most-popular-app-in-the-world.png");
-  background-repeat: no-repet;
+  background-repeat: no-repeat;
   position: center;
   background-size: cover;
 }
