--- a/Programmieren/Radio/Install/Apps/Minecraft/index.css
+++ b/Programmieren/Radio/Install/Apps/Minecraft/index.css
@@ -117,3 +117,14 @@ img:hover {
     text-decoration-color: orange;
     font-family: "Roboto", sans-serif;
 }
+
+.Install {
+    text-align: center;
+    font-size: 3em;
+    color: pink;
+    font-weight: bold;
+    font-style: italic;
+    text-decoration: underline;
+    text-decoration-color: black;
+    font-family: "Anton", sans-serif;
+}
