--- a/Programmieren/Radio/Install/Apps/Minecraft/All.Pages.css
+++ b/Programmieren/Radio/Install/Apps/Minecraft/All.Pages.css
@@ -42,7 +42,7 @@ body {
 .Packs {
     text-align: center;
     font-size: 3em;
-    color: red;
+    color: black;
     font-weight: bold;
     font-style: italic;
     text-decoration: underline;
@@ -70,4 +70,15 @@ body {
     text-decoration: underline;
     text-decoration-color: black;
     font-family: "Anton", sans-serif;
+}
+
+.Add-Ons {
+    text-align: center;
+    font-size: 3em;
+    color: black;
+    font-weight: bold;
+    font-style: italic;
+    text-decoration: underline;
+    text-decoration-color: purple;
+    font-family: "Pixelify Sans", sans-serif;
 }
