--- a/Programmieren/Radio/Install/Apps/Minecraft/All.Pages.css
+++ b/Programmieren/Radio/Install/Apps/Minecraft/All.Pages.css
@@ -93,3 +93,25 @@ body {
     text-decoration-color: orange;
     font-family: "Roboto", sans-serif;
 }
+
+.CurseForge {
+    text-align: center;
+    font-size: 3em;
+    color: pink;
+    font-weight: bold;
+    font-style: italic;
+    text-decoration: underline;
+    text-decoration-color: black;
+    font-family: "Anton", sans-serif;
+}
+
+.Download {
+    text-align: center;
+    font-size: 3em;
+    color: black;
+    font-weight: bold;
+    font-style: italic;
+    text-decoration: underline;
+    text-decoration-color: purple;
+    font-family: "Pixelify Sans", sans-serif;
+  }
