Update index.css in ADS

--- a/ADS/index.css
+++ b/ADS/index.css
@@ -1,5 +1,5 @@
 body {
-    background-image: "https://th.bing.com/th/id/R.ff7ed568b9a33cdfc7602bcc6f849015?rik=Cw5TGQrSNiDGnQ&riu=http%3a%2f%2fwebneel.com%2fdaily%2fsites%2fdefault%2ffiles%2fimages%2fdaily%2f07-2014%2f5-best-ads-agasalho-hamburguer.jpg&ehk=QjuipE79CuTHajhNguWHJmodwSt5qf%2fQjToS7CYhhzA%3d&risl=&pid=ImgRaw&r=0";
+    background-image: "https://image.spreadshirtmedia.net/image-server/v1/compositions/T623A1PA6718PT32X5Y0D190851829W5934H5934/views/1,width=550,height=550,appearanceId=1,backgroundColor=FFFFFF,noPt=true/here-could-be-your-ad-create-gift-yoursel-teddybaer.jpg";
 }
 
 .r6 {
