--- a/Programmieren/Radio/index.css
+++ b/Programmieren/Radio/index.css
@@ -4,7 +4,7 @@
 }
 
 .c6 {
-    width: 10%;
+    width: 11.1%;
     height: 100%;
     position: relative;
     float: left;
@@ -115,7 +115,7 @@ img:hover {
     font-family: "Pixelify Sans", sans-serif;
 }
 
-.ADS {
+.Italien {
     text-align: center;
     font-size: 1.5em;
     color: aqua;
