--- a/Shop/All.Pages.css
+++ b/Shop/All.Pages.css
@@ -1,81 +1,5 @@
 body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f4f4f4;
-        }
-        header {
-            background-color: #333;
-            color: #fff;
-            padding: 1rem;
-            text-align: center;
-        }
-        .container {
-            max-width: 1200px;
-            margin: 2rem auto;
-            padding: 1rem;
-            background-color: #fff;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
-        .content {
-            display: flex;
-            flex-wrap: wrap;
-            gap: 1rem;
-        }
-        .card {
-            flex: 1 1 calc(33.333% - 1rem);
-            background-color: #e2e2e2;
-            padding: 1rem;
-            border-radius: 5px;
-            text-align: center;
-        }
-        .card img {
-            max-width: 100%;
-            height: auto;
-            border-radius: 5px;
-        }
-        .card h3 {
-            margin: 1rem 0 0.5rem;
-        }
-        .card p {
-            margin: 0 0 1rem;
-        }
-        .card a {
-            display: inline-block;
-            padding: 0.5rem 1rem;
-            background-color: #333;
-            color: #fff;
-            text-decoration: none;
-            border-radius: 5px;
-        }
-        .card a:hover {
-            background-color: #555;
-        }
-
-.nav {
-    background-color: red;
-    padding-top: 1%;
-    padding-bottom: 1%;
-    width: 100%;
-    text-align: center;
-}
-
-.nav a {
-    padding: 1%;
-}
-
-body {
-    background: radial-gradient(
-        circle,
-        rgb(1,1,1,1) 12.5%,
-        rgb(61,9,121,1) 30%,
-        rgb(255,0,0,1) 25%,
-        rgb(255,0,185,1) 35%,
-        rgb(0, 255, 221) 40%,
-        rgb(255,175,0,1) 45%,
-        rgb(0,181,255,1) 50%,
-        rgb(0,14,255,1) 20%
-    );
+    background-image: "favicon.ico";
 }
 
 .r6 {
@@ -101,4 +25,26 @@ body {
     font-family: "Playwrite AT", cursive;
     -webkit-text-stroke-color: pink;
     -webkit-text-stroke-width: 0.125px;
+}
+
+.Roblox {
+    text-align: center;
+    font-size: 1.5em;
+    color: purple;
+    font-weight: bold;
+    font-style: italic;
+    text-decoration: underline;
+    text-decoration-color: red;
+    font-family: "Pixelify Sans", sans-serif;
+}
+
+.Minecraft {
+    text-align: center;
+    font-size: 1.5em;
+    color: aqua;
+    font-weight: bold;
+    font-style: italic;
+    text-decoration: underline;
+    text-decoration-color: orange;
+    font-family: "Roboto", sans-serif;
 }
